# cafe-contracts-usage-example

./: .gitignore  main.py  pyproject.toml
tests/: test_contract.py
