[tool.poetry]
name = "cafe"
version = "0.1.0"
description = ""
authors = ["Nick Yasnogorodskyi <nikyasnogorodskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
faust = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = ">=0.20.0"
pytest-httpx = "^0.20.0"
pytest-mock = "^3.6.1"
pytest-order = "^1.0.0"
pytest-split = "^0.7.0"
pytest-timeout = "^1.4.2"
pytest-xdist = "^1.34.0"
pytest = "7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "jfrog"
url = "https://orcasecurity.jfrog.io/artifactory/api/pypi/orca-pypi/simple"
secondary = true
